setting up JS Fullscreen API

--- a/style.css
+++ b/style.css
@@ -22,3 +22,11 @@ body {
 #enemy1 {
     display: none;
 }
+#fullScreenButton {
+    position: absolute;
+    font-size: 20px;
+    padding: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
